fixed creating att

--- a/Views/Attendant/Index.cshtml
+++ b/Views/Attendant/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreateAttendant">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -140,7 +140,7 @@
                     @Html.DisplayFor(modelItem => item.Modified)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.StaffId">Edit</a> |
+                    <a asp-action="UpdateAttendantDetail" asp-route-id="@item.StaffId">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.StaffId">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.StaffId">Delete</a>
                 </td>
