fixing attendant dto

--- a/Views/Attendant/Index.cshtml
+++ b/Views/Attendant/Index.cshtml
@@ -140,9 +140,9 @@
                     @Html.DisplayFor(modelItem => item.Modified)
                 </td>
                 <td>
-                    <a asp-action="UpdateAttendantDetail" asp-route-id="@item.StaffId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.StaffId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.StaffId">Delete</a>
+                    <a asp-action="UpdateAttendantDetail" asp-route-staffId="@item.StaffId">Edit</a> |
+                    <a asp-action="Details" asp-route-staffId="@item.StaffId">Details</a> |
+                    <a asp-action="Delete" asp-route-staffId="@item.StaffId">Delete</a>
                 </td>
             </tr>
         }
