--- a/Views/Attendant/CreateAttendant.cshtml
+++ b/Views/Attendant/CreateAttendant.cshtml
@@ -3,9 +3,9 @@
 
 @{
 	ViewData["Title"] = "Create";
-	if (TempData["Sucess"] != null)
+	if (TempData["Success"] != null)
 	{
-		<h2>@TempData["sucess"]</h2>
+		<h2>@TempData["success"]</h2>
 	}
 	if (TempData["failed"] != null)
 	{
