--- a/Views/Attendant/Index.cshtml
+++ b/Views/Attendant/Index.cshtml
@@ -4,6 +4,17 @@
 @{
 	ViewData["Title"] = "Index";
 }
+@{
+	ViewData["Title"] = "Create";
+	if (TempData["Success"] != null)
+	{
+		<h2>@TempData["success"]</h2>
+	}
+	if (TempData["failed"] != null)
+	{
+		<h2>@TempData["failed"]</h2>
+	}
+}
 
 <h1>Index</h1>
 
