Re Added migration

--- a/Views/Attendant/Create.cshtml
+++ b/Views/Attendant/Create.cshtml
@@ -19,7 +19,7 @@
 	<hr />
 	<div class="row">
 		<div class="col-md-4">
-			<form asp-action="CreateAttendant">
+			<form asp-action="Create">
 				<!--  <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 				  <div class="form-group">
 					  <label asp-for="UserId" class="control-label"></label>
