--- a/Views/Attendant/Edit.cshtml
+++ b/Views/Attendant/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@using SMS_MVCDTO.Enums
-@using SMS_MVCDTO.DTOs.AttendantDTOs
-@model SMS_MVCDTO.DTOs.AttendantDTOs.UpdateAttendantRequestModel
+@*@using SMS_MVCDTO.DTOs.AttendantDTOs*@
+@model SMS_MVCDTO.DTOs.AttendantDTOs.AttendantResponseModel
 
 @{
 	ViewData["Title"] = "Edit";
-	ViewData["Title"] = "Create";
+	//ViewData["Title"] = "Edit";
 	if (TempData["Success"] != null)
 	{
 		<h2>@TempData["success"]</h2>
@@ -17,12 +17,12 @@
 <h4>Attendant</h4>
 <hr />
 
-<div asp-controller="Attendant" asp-action="UpdateAttendantDetail" style="font-size: 130%;">
+<div asp-controller="Attendant" asp-action="Edit" style="font-size: 130%;">
 <div class="row">
 	<div class="col-md-4">
-		<form asp-action="UpdateAttendantDetail">
+		<form asp-action="Edit">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-			<input type="hidden" asp-for="StaffId" />
+				<input type="hidden" asp-for="Data.StaffId" />
 
 			<!--
 			<div class="form-group">
@@ -33,15 +33,15 @@
 			-->
 
 			<div class="form-group">
-				<label asp-for="FirstName" class="control-label"></label>
-				<input asp-for="FirstName" class="form-control" />
-				<span asp-validation-for="FirstName" class="text-danger"></span>
+				<label asp-for="Data.FirstName" class="control-label"></label>
+					<input asp-for="Data.FirstName" class="form-control" />
+					<span asp-validation-for="Data.FirstName" class="text-danger"></span>
 			</div>
 
 			<div class="form-group">
-				<label asp-for="LastName" class="control-label"></label>
-				<input asp-for="LastName" class="form-control" />
-				<span asp-validation-for="LastName" class="text-danger"></span>
+					<label asp-for="Data.LastName" class="control-label"></label>
+				<input asp-for="Data.LastName" class="form-control" />
+					<span asp-validation-for="Data.LastName" class="text-danger"></span>
 			</div>
 
 			<!--
@@ -75,9 +75,9 @@
 
 
 			<div class="form-group">
-				<label asp-for="ResidentialAddress" class="control-label"></label>
-				<input asp-for="ResidentialAddress" class="form-control" />
-				<span asp-validation-for="ResidentialAddress" class="text-danger"></span>
+					<label asp-for="Data.ResidentialAddress" class="control-label"></label>
+					<input asp-for="Data.ResidentialAddress" class="form-control" />
+				<span asp-validation-for="Data.ResidentialAddress" class="text-danger"></span>
 			</div>
 			<!--
 			<div class="form-group form-check">
@@ -102,20 +102,20 @@
 			</div>
 			-->
 			<div class="form-group">
-				<label asp-for="MaritalStatus" class="control-label"></label>
-				<select asp-for="MaritalStatus" asp-items="Html.GetEnumSelectList<MaritalStatusType>()"></select>
+					<label asp-for="Data.MaritalStatus" class="control-label"></label>
+					<select asp-for="Data.MaritalStatus" asp-items="Html.GetEnumSelectList<MaritalStatusType>()"></select>
 
-				<span asp-validation-for="MaritalStatus" class="text-danger"></span>
+					<span asp-validation-for="Data.MaritalStatus" class="text-danger"></span>
 			</div>
 			<div class="form-group">
-				<label asp-for="BankAccountNumber" class="control-label"></label>
-				<input asp-for="BankAccountNumber" class="form-control" />
-				<span asp-validation-for="BankAccountNumber" class="text-danger"></span>
+					<label asp-for="Data.BankAccountNumber" class="control-label"></label>
+				<input asp-for="Data.BankAccountNumber" class="form-control" />
+					<span asp-validation-for="Data.BankAccountNumber" class="text-danger"></span>
 			</div>
 			<div class="form-group">
-				<label asp-for="BankName" class="control-label"></label>
-				<input asp-for="BankName" class="form-control" />
-				<span asp-validation-for="BankName" class="text-danger"></span>
+					<label asp-for="Data.BankName" class="control-label"></label>
+					<input asp-for="Data.BankName" class="form-control" />
+					<span asp-validation-for="Data.BankName" class="text-danger"></span>
 			</div>
 			<!--
 			<div class="form-group">
@@ -149,7 +149,7 @@
 			<input type="hidden" asp-for="StaffId" /> -->
 
 			<div class="form-group">
-				<input type="submit" value="Save" class="btn btn-primary" />
+				<input type="submit" value="Save" class="btn btn-success" />
 			</div>
 		</form>
 	</div>
