fixesd create customer

--- a/Views/Customer/Details.cshtml
+++ b/Views/Customer/Details.cshtml
@@ -10,55 +10,55 @@
     <h4>Customer</h4>
     <hr />
     <dl class="row">
-        <dd class="col-sm-4">
+       @* <dd class="col-sm-2">
             @Html.DisplayFor(model => model.Data.Password)
-        </dd>
+        </dd>*@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.FirstName)
         </dt>
-        <dd class="col-sm-4">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.FirstName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.LastName)
         </dt>
-        <dd class="col-sm-4">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.LastName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.StaffId)
         </dt>
-        <dd class="col-sm-4">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.StaffId)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.Email)
         </dt>
-        <dd class="col-sm-4">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.Email)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.PhoneNumber)
         </dt>
-        <dd class="col-sm-4">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.PhoneNumber)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.DateOfBirth)
         </dt>
-        <dd class="col-sm-4">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.DateOfBirth)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.Gender)
         </dt>
-        <dd class="col-sm-2">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.Gender)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.MaritalStatus)
         </dt>
-        <dd class="col-sm-2">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.MaritalStatus)
         </dd>
         </dl>
