--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -1,5 +1,87 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<SMS_MVCDTO.Models.DTOs.ProductDTOs.ProductResponseModel>
 @{
+    ViewData["Title"] = "Create";
+    if (TempData["success"] != null)
+    {
+        <h2>@TempData["success"]</h2>
+    }
+    if (TempData["failed"] != null)
+    {
+        <h2>@TempData["failed"]</h2>
+    }
 }
+
+
+<h1>Product Index</h1>
+
+<p>
+    <a asp-action="Create">Add Product</a>
+</p>
+@{
+    //int i = 0;
+}
+<table class="table table-info col-md-4">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Data.Barcode)
+            </th>
+            
+            <th>
+                @Html.DisplayNameFor(model => model.Data.Name)
+            </th>
+           
+            <th>
+                @Html.DisplayNameFor(model => model.Data.Quantity)
+            </th>
+           
+            <th>
+                @Html.DisplayNameFor(model => model.Data.ReorderLevel)
+            </th>
+            
+            <th>
+                @Html.DisplayNameFor(model => model.Data.SellingPrice)
+            </th>
+            
+            <th>
+                @Html.DisplayNameFor(model => model.Data.IsAvailable)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.Barcode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.Quantity)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.ReorderLevel)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.SellingPrice)
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.IsAvailable)
+                </td>
+
+
+                <td>
+                    <a asp-action="Edit" asp-route-Barcode="@item.Data.Barcode">Edit</a> |
+                    <a asp-action="Details" asp-route-Barcode="@item.Data.Barcode">Details</a> |
+                    <a asp-action="DeletePreview" asp-route-Barcode="@item.Data.Barcode">Delete</a> |
+                    <a asp-controller="Transaction" asp-action="Create" asp-route-Barcode="@item.Data.Barcode">Buy</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
