--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SMS_MVCDTO.styles.css" asp-append-version="true" />
+@*
+    <link rel="stylesheet" href="~lib/bootstrap/dist/css/all.css" />
+    <link rel="stylesheet" href="~/css/loginstyle.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+*@
 </head>
 <body>
     <header>
