--- a/Views/Transaction/Index.cshtml
+++ b/Views/Transaction/Index.cshtml
@@ -1,5 +1,93 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<SMS_MVCDTO.Models.DTOs.TransactionDTOs.TransactionResponseModel>
 @{
+    ViewData["Title"] = "Create";
+    if (TempData["success"] != null)
+    {
+        <h2>@TempData["success"]</h2>
+    }
+    if (TempData["failed"] != null)
+    {
+        <h2>@TempData["failed"]</h2>
+    }
 }
+
+
+<h1>Transactions</h1>
+
+<p>
+    <a asp-action="Create">Buy A product</a>
+</p>
+@{
+    //int i = 0;
+}
+<table class="table table-info col-md-4">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Data.ReferenceNo)
+            </th>
+
+            <th>
+                @Html.DisplayNameFor(model => model.Data.Created)
+            </th>
+
+            <th>
+                @Html.DisplayNameFor(model => model.Data.CustomerId)
+            </th>
+
+            <th>
+                @Html.DisplayNameFor(model => model.Data.AttendantId)
+            </th>
+
+            <th>
+                @Html.DisplayNameFor(model => model.Data.BarCode)
+            </th>
+
+            <th>
+                @Html.DisplayNameFor(model => model.Data.Quantity)
+            </th>
+
+            <th>
+                @Html.DisplayNameFor(model => model.Data.TotalAmount)
+            </th>
+
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.ReferenceNo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.Created)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.CustomerId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.AttendantId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.BarCode)
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.Quantity)
+                </td>
+                
+                <td>
+                    @Html.DisplayFor(modelItem => item.Data.TotalAmount)
+                </td>
+
+
+                <td>
+                    <a asp-action="Details" asp-route-Barcode="@item.Data.ReferenceNo">Details</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
