STarted Adding fot Slaes Manager

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="signup">Sign</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Create">Sign-Up</a>
                         </li>
                     </ul>
                 </div>
