--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SMS_MVCDTO.styles.css" asp-append-version="true" />
     @*
-        <link rel="stylesheet" href="~lib/bootstrap/dist/css/all.css" />
-        <link rel="stylesheet" href="~/css/loginstyle.css" />
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="~lib/bootstrap/dist/css/all.css" />
+    <link rel="stylesheet" href="~/css/loginstyle.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
     *@
 </head>
 
@@ -22,7 +22,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SMS_MVCDTO TOP</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -33,6 +33,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
+                    </ul>
+
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
                         </li>
@@ -40,26 +44,27 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Create">Sign-Up</a>
                         </li>
                     </ul>
+
                 </div>
             </div>
         </nav>
     </header>
 
     @* <div class="navbar navbar-expand-md navbar-dark bg-dark"> *@
-    @if (ViewBag.ShowElement1 != null && ViewBag.ShowElement1 != false)
-    {
-        <div class="navigatebody">
-            <nav>
-                <h2>WELCOME</h2>
-                <ul>
-                    <li><a href="/home">Home</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/Services">Services</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    }
+    @*  @if (ViewBag.ShowElement1 != null && ViewBag.ShowElement1 != false)
+    {*@
+    <div class="navigatebody">
+        <nav>
+            <h2>WELCOME</h2>
+            <ul>
+                <li><a href="/home">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/Services">Services</a></li>
+                <li><a href="/contact">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+    @*}*@
     <div class="bodycontains">
         <main role="main" class="pb-3">
             @RenderBody()
