fixed search by attendant name

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
     @* <div class="navbar navbar-expand-md navbar-dark bg-dark"> *@
     @*  @if (ViewBag.ShowElement1 != null && ViewBag.ShowElement1 != false)
     {*@
-    <div class="navigatebody">
+   @* <div class="navigatebody">
         <nav>
             <h2>WELCOME</h2>
             <ul>
@@ -63,8 +63,9 @@
                 <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
-    </div>
+    </div>*@
     @*}*@
+
     <div class="bodycontains">
         <main role="main" class="pb-3">
             @RenderBody()
