--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -50,3 +50,97 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+
+
+
+
+
+/* Box sizzin border box */
+
+* {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
+
+
+/* colour for each box */
+.box1 {
+    background: #3498db;
+}
+
+.box2 {
+    background: #16a085;
+}
+
+.box3 {
+    background: #34495e;
+}
+
+.box4 {
+    background: #2ecc71;
+}
+
+.box5 {
+    background: #f000f0;
+}
+
+.box6 {
+    background: #372364;
+}
+
+.box7 {
+    background: #b9f1ac;
+}
+
+.box8 {
+    background: #6d56ed;
+}
+
+.box9 {
+    background: #630707;
+}
+
+.box10 {
+    background: #ffe600;
+}
+
+
+
+/* Show default size to make each box visible */
+.box {
+    color: rgb(218, 207, 207);
+    font-size: 20px;
+    text-align: center;
+    text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.1);
+    /* padding: 10px; */
+
+    width: inherit;
+    height: inherit;
+    margin: 10px;
+    padding: 10px;
+    /* flex: 1;  */
+}
+
+
+
+.container1 {
+    display: flex;
+    justify-content: flex-end;
+    width: auto;
+    
+}
+
+.container {
+    display: flex;
+    justify-content: flex-end;
+  
+}
+
+.box1 {
+    flex-basis: 900px;
+    flex-grow: 1;
+}
